--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -97,7 +97,7 @@
 
         <section>
             <h2>Hva deles med arrangøren?</h2>
-            <p>NAV samarbeider med Unikum Inkludering AS. Arrangøren behandler opplysninger på vegne av NAV.</p>
+            <p>NAV samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
             <ul>
                 <li>Navn og kontaktinformasjonen til NAV-veilederen din</li>
                 <li>Påmeldingen: Innholdet og bakgrunnsinformasjon</li>
