--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -23,6 +23,9 @@
         float: left;
         padding-top: 2rem;
     }
+    .avsender {
+        padding-top: 3rem;
+    }
     p {
         padding: 0;
         margin: 0;
