--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -16,11 +16,15 @@
         display: block;
     }
     .logo {
-        float: right;
+        float: left;
         height: 6rem;
     }
     .personalia {
         float: left;
+        padding-top: 2rem;
+    }
+    .vedtaksdato {
+        float: right;
         padding-top: 2rem;
     }
     .avsender {
