--- a/templates/amt/header.hbs
+++ b/templates/amt/header.hbs
@@ -1,9 +1,10 @@
 <header>
+    <img class="logo" alt="NAV logo" src="{{ image "Navlogo.png" }}"/>
     <div class="personalia">
         <p>{{deltaker.fornavn}} {{#if deltaker.mellomnavn}} {{deltaker.mellomnavn}} {{/if}} {{deltaker.etternavn}}</p>
-        {{#each deltaker.adresselinjer}}
-        <p>{{this}}</p>
-        {{/each}}
+        <p>Fødselsnummer: {{deltaker.personident}}</p>
     </div>
-    <img class="logo" alt="NAV logo" src="{{ image "Navlogo.png" }}"/>
+    <div class="vedtaksdato">
+        <p>{{iso_to_nor_date this.vedtaksdato}}</p>
+    </div>
 </header>
