--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -6,50 +6,17 @@
     <meta name="author" content="amt-pdfgen"/>
     <meta name="subject" content="Vedtak"/>
 
-    <style>
-        @page {
-            margin: 1cm;
-        }
-        * {
-            font-family: "Source Sans Pro", SourceSansPro, Source_Sans_Pro, ArialSystem, sans-serif;
-             box-sizing: border-box;
-        }
-        section {
-            page-break-inside: avoid;
-        }
-        header {
-            display: block;
-        }
-        .logo {
-            float: right;
-            height: 6rem;
-        }
-        .personalia {
-            float: left;
-            padding-top: 2rem;
-        }
-        p {
-            padding: 0;
-            margin: 0;
-        }
-        main {
-            clear: both;
-        }
-    </style>
+    {{#block 'amt/style' }}
+    {{/block}}
 
     <title>Vedtak om tiltaksdeltakelse</title>
 
 </head>
 <body>
-    <header>
-        <div class="personalia">
-            <p>{{deltaker.fornavn}} {{#if deltaker.mellomnavn}} {{deltaker.mellomnavn}} {{/if}} {{deltaker.etternavn}}</p>
-            {{#each deltaker.adresselinjer}}
-            <p>{{this}}</p>
-            {{/each}}
-        </div>
-        <img class="logo" alt="NAV logo" src="{{ image "Navlogo.png" }}"/>
-    </header>
+    <div id="footer">
+        <span class="sidetall">Side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
+    </div>
+    {{> amt/header}}
     <main>
         <section>
             <h1>Endring i: {{deltakerliste.navn}}</h1>
@@ -107,13 +74,7 @@
             </ul>
         </section>
 
-        <div style="padding-top: 3rem">
-            <p>
-                Med vennlig hilsen<br /><br />
-                {{navVeileder.navn}}<br />
-                {{navVeileder.enhet}}
-            </p>
-        </div>
+        {{> amt/avsender}}
     </main>
 </body>
 </html>
