oppdatert format for om vi deler adresse

--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -63,7 +63,7 @@
                 <li>Påmeldingen: Innholdet og bakgrunnsinformasjon</li>
                 <li>Navn og fødselsnummer</li>
                 <li>Telefonnummer og e-postadresse</li>
-                {{#if deltaker.adresselinjer.length}}
+                {{#if deltaker.adresseDelesMedArrangor}}
                 <li>Adresse</li>
                 {{/if}}
             </ul>
