--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -60,7 +60,7 @@
             <p>NAV samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
             <ul>
                 <li>Navn og kontaktinformasjonen til NAV-veilederen din</li>
-                <li>Påmeldingen: Innholdet og bakgrunnsinformasjon</li>
+                <li>Innholdet og bakgrunnsinformasjonen i påmeldingen</li>
                 <li>Navn og fødselsnummer</li>
                 <li>Telefonnummer og e-postadresse</li>
                 {{#if deltaker.adresseDelesMedArrangor}}
