sender deltakelsesmengde som tekst

--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -34,8 +34,8 @@
             {{/if}}
             {{#if this.deltakelsesprosent}}
                 <p>Ny deltakelsesprosent: {{this.deltakelsesprosent}} %</p>
-                {{#if this.dagerPerUke}}
-                    <p>{{this.dagerPerUke}} dager i uka</p>
+                {{#if this.dagerPerUkeTekst}}
+                    <p>{{this.dagerPerUkeTekst}}</p>
                 {{/if}}
             {{/if}}
             {{#if this.bakgrunnsinformasjon}}
