--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -54,7 +54,10 @@
 
         {{> amt/hvaerdette}}
 
-        {{> amt/klage}}
+        <section>
+            <h2>Du har rett til å klage</h2>
+            <p>Du kan klage hvis du er uenig i endringer på deltakelsen. Fristen for å klage er seks uker etter du mottok informasjonen. Les mer om retten til å klage på <a href="https://www.nav.no/klage">nav.no/klage</a></p>
+        </section>
 
         {{> amt/sporsmal}}
 
