visuell styling hovedvedtak

--- a/templates/amt/avsender.hbs
+++ b/templates/amt/avsender.hbs
@@ -1,6 +1,6 @@
 <div class="avsender">
     <p>
-        Med vennlig hilsen<br /><br />
+        Med vennlig hilsen<br />
         {{navVeileder.navn}}<br />
         {{navVeileder.enhet}}
     </p>
