--- a/templates/amt/header.hbs
+++ b/templates/amt/header.hbs
@@ -1,10 +1,19 @@
 <header>
-    <img class="logo" alt="NAV logo" src="{{ image "Navlogo.png" }}"/>
-    <div class="personalia">
-        <p>{{deltaker.fornavn}} {{#if deltaker.mellomnavn}} {{deltaker.mellomnavn}} {{/if}} {{deltaker.etternavn}}</p>
-        <p>Fødselsnummer: {{deltaker.personident}}</p>
-    </div>
-    <div class="vedtaksdato">
-        <p>{{iso_to_nor_date this.vedtaksdato}}</p>
+    <img class="logo" alt="NAV logo" src="{{ image "Navlogo.png" }}" />
+    <div class="personalia-wrapper">
+        <table class="personalia-table">
+            <tr>
+                <th scope="row">Navn:</th>
+                <td>{{deltaker.fornavn}} {{#if deltaker.mellomnavn}} {{deltaker.mellomnavn}} {{/if}}
+                    {{deltaker.etternavn}}</td>
+            </tr>
+            <tr>
+                <th scope="row">Fødselsnummer:</th>
+                <td>{{deltaker.personident}}</td>
+            </tr>
+        </table>
+        <div class="vedtaksdato">
+            <p>{{iso_to_nor_date this.vedtaksdato}}</p>
+        </div>
     </div>
 </header>
