--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -22,11 +22,13 @@
         margin-bottom: 1rem;
         font-size: 24px;
         line-height: 26px;
+        font-weight: 700;
     }
     h2 {
         margin-top: 1.25rem;
         margin-bottom: 0;
         font-size: 21px;
+        font-weight: 700;
         line-height: 26px;
     }
     .logo {
@@ -43,7 +45,7 @@
     }
     .vedtaksdato {
         float: right;
-        padding-top: 4rem;
+        padding-top: 63px;
     }
     .avsender {
         padding-top: 3rem;
