--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -7,25 +7,45 @@
     }
     * {
         font-family: "Source Sans Pro", SourceSansPro, Source_Sans_Pro, ArialSystem, sans-serif;
-         box-sizing: border-box;
+        font-size: 16px;
+        line-height: 24px;
+        box-sizing: border-box;
     }
     section {
         page-break-inside: avoid;
     }
     header {
         display: block;
+        margin-bottom: 3rem;
+    }
+    h1 {
+        margin-bottom: 1rem;
+        font-size: 24px;
+        line-height: 26px;
+        font-weight: 700;
+    }
+    h2 {
+        margin-top: 1.25rem;
+        margin-bottom: 0;
+        font-size: 21px;
+        font-weight: 700;
+        line-height: 26px;
     }
     .logo {
-        float: left;
-        height: 6rem;
+        height: 2.9rem;
     }
-    .personalia {
+    .personalia-table {
         float: left;
+        width: fit-content;
         padding-top: 2rem;
+    }
+    .personalia-table th {
+        font-weight: normal;
+        padding-right: 1rem;
     }
     .vedtaksdato {
         float: right;
-        padding-top: 2rem;
+        padding-top: 63px;
     }
     .avsender {
         padding-top: 3rem;
