Endre tekst i hovedvedtak, avklare til avtale. endre demo data

--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h1>{{deltakerliste.navn}}</h1>
-            <p>Du er meldt på arbeidsmarkedstiltaket: {{deltakerliste.navn}}. Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avklare oppstart.</p>
+            <p>Du er meldt på arbeidsmarkedstiltaket: {{deltakerliste.navn}}. Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale oppstart.</p>
         </section>
 
         <section>
@@ -38,7 +38,7 @@
 
         <section>
             <h2>Bakgrunnsinfo</h2>
-            <p>{{deltaker.bakgrunnsinformasjon}}</p> 
+            <p>{{deltaker.bakgrunnsinformasjon}}</p>
         </section>
 
         {{#if deltaker.deltakelsesmengdeTekst}}
