Vise lang dato og sidetall mindre skrift

--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -66,6 +66,9 @@
     .sidetall {
         float: right;
     }
+    #pagenumber, #pagecount, .sidetall {
+        font-size: 12px;
+    }
     #pagenumber:before {
         content: counter(page);
     }
