tar med begrunnelse for endringer

--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -38,6 +38,10 @@
                     <p>{{this.dagerPerUkeTekst}}</p>
                 {{/if}}
             {{/if}}
+            {{#if this.begrunnelse}}
+                <p>Begrunnelse:</p>
+                <p>{{this.begrunnelse}}</p>
+            {{/if}}
             {{#if this.bakgrunnsinformasjon}}
                 <p>{{this.bakgrunnsinformasjon}}</p>
             {{/if}}
