--- a/templates/amt/hvaerdette.hbs
+++ b/templates/amt/hvaerdette.hbs
@@ -1,4 +1,4 @@
 <section>
-    <h2>Hva er dette?</h2>
+    <h2>Dette er et vedtak</h2>
     <p>Dette er et vedtak etter arbeidsmarkedsloven § 12 og forskrift om arbeidsmarkedstiltak kapittel {{deltakerliste.forskriftskapittel}}.</p>
 </section>
