--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -21,6 +21,11 @@
         <section>
             <h1>{{deltakerliste.navn}}</h1>
             <p>Du er meldt på arbeidsmarkedstiltaket: {{deltakerliste.navn}}. Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale oppstart.</p>
+            {{#if this.begrunnelseFraNav}}
+                <br />
+                <p>Begrunnelse:</p>
+                <p>{{this.begrunnelseFraNav}}</p>
+            {{/if}}
         </section>
 
         <section>
