viser kun bakgrunnsinformasjon i hovedvedtak om den finnes

--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -41,10 +41,10 @@
             {{/if}}
         </section>
 
-        {{#if deltaker.bakgrunnsinformasjon}}
+        {{#if this.deltaker.bakgrunnsinformasjon}}
         <section>
             <h2>Bakgrunnsinfo</h2>
-            <p>{{deltaker.bakgrunnsinformasjon}}</p>
+            <p>{{this.deltaker.bakgrunnsinformasjon}}</p>
         </section>
         {{/if}}
 
