--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -50,6 +50,9 @@
     .avsender {
         padding-top: 3rem;
     }
+    .forslag {
+        padding-top: 0.5rem;
+    }
     p {
         padding: 0;
         margin: 0;
